artichoke-backend/src/sys/ffi.rs

#[test]
fn bindgen_test_layout_mrb_state() {
    const UNINIT: ::core::mem::MaybeUninit<mrb_state> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<mrb_state>(),
        9616usize,
        concat!("Size of: ", stringify!(mrb_state))
    );
    assert_eq!(
        ::core::mem::align_of::<mrb_state>(),
        8usize,
        concat!("Alignment of ", stringify!(mrb_state))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).jmp) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(jmp))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).allocf) as usize - ptr as usize },
        8usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(allocf))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).allocf_ud) as usize - ptr as usize },
        16usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(allocf_ud))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).c) as usize - ptr as usize },
        24usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(c))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).root_c) as usize - ptr as usize },
        32usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(root_c))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).globals) as usize - ptr as usize },
        40usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(globals))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).exc) as usize - ptr as usize },
        48usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(exc))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).top_self) as usize - ptr as usize },
        56usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(top_self))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).object_class) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(object_class)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).class_class) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(class_class)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).module_class) as usize - ptr as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(module_class)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).proc_class) as usize - ptr as usize },
        88usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(proc_class))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).string_class) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(string_class)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).array_class) as usize - ptr as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(array_class)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).hash_class) as usize - ptr as usize },
        112usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(hash_class))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).range_class) as usize - ptr as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(range_class)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).float_class) as usize - ptr as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(float_class)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).integer_class) as usize - ptr as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(integer_class)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).true_class) as usize - ptr as usize },
        144usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(true_class))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).false_class) as usize - ptr as usize },
        152usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(false_class)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nil_class) as usize - ptr as usize },
        160usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(nil_class))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).symbol_class) as usize - ptr as usize },
        168usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(symbol_class)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).kernel_module) as usize - ptr as usize },
        176usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(kernel_module)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).gc) as usize - ptr as usize },
        184usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(gc))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cache) as usize - ptr as usize },
        296usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(cache))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).symidx) as usize - ptr as usize },
        8488usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(symidx))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).symtbl) as usize - ptr as usize },
        8496usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(symtbl))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).symlink) as usize - ptr as usize },
        8504usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(symlink))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).symflags) as usize - ptr as usize },
        8512usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(symflags))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).symhash) as usize - ptr as usize },
        8520usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(symhash))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).symcapa) as usize - ptr as usize },
        9544usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(symcapa))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).symbuf) as usize - ptr as usize },
        9552usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(symbuf))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).eException_class) as usize - ptr as usize },
        9560usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(eException_class)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).eStandardError_class) as usize - ptr as usize },
        9568usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(eStandardError_class)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nomem_err) as usize - ptr as usize },
        9576usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(nomem_err))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).stack_err) as usize - ptr as usize },
        9584usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(stack_err))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ud) as usize - ptr as usize },
        9592usize,
        concat!("Offset of field: ", stringify!(mrb_state), "::", stringify!(ud))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).atexit_stack) as usize - ptr as usize },
        9600usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(atexit_stack)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).atexit_stack_len) as usize - ptr as usize },
        9608usize,
        concat!(
            "Offset of field: ",
            stringify!(mrb_state),
            "::",
            stringify!(atexit_stack_len)
        )
    );
}
extern "C" {
    pub fn mrb_define_class(mrb: *mut mrb_state, name: *const ::core::ffi::c_char, super_: *mut RClass)
        -> *mut RClass;
}
extern "C" {
    pub fn mrb_define_class_id(mrb: *mut mrb_state, name: mrb_sym, super_: *mut RClass) -> *mut RClass;
}
extern "C" {
    pub fn mrb_define_module(mrb: *mut mrb_state, name: *const ::core::ffi::c_char) -> *mut RClass;
}
extern "C" {
    pub fn mrb_define_module_id(mrb: *mut mrb_state, name: mrb_sym) -> *mut RClass;
}
extern "C" {
    pub fn mrb_singleton_class(mrb: *mut mrb_state, val: mrb_value) -> mrb_value;
}
extern "C" {
    pub fn mrb_singleton_class_ptr(mrb: *mut mrb_state, val: mrb_value) -> *mut RClass;
}
extern "C" {
    pub fn mrb_include_module(mrb: *mut mrb_state, cla: *mut RClass, included: *mut RClass);
}
extern "C" {
    pub fn mrb_prepend_module(mrb: *mut mrb_state, cla: *mut RClass, prepended: *mut RClass);
}
extern "C" {
    pub fn mrb_define_method(
        mrb: *mut mrb_state,
        cla: *mut RClass,
        name: *const ::core::ffi::c_char,
        func: mrb_func_t,
        aspec: mrb_aspec,
    );
}
extern "C" {
    pub fn mrb_define_method_id(mrb: *mut mrb_state, c: *mut RClass, mid: mrb_sym, func: mrb_func_t, aspec: mrb_aspec);
}
extern "C" {
    pub fn mrb_define_class_method(
        mrb: *mut mrb_state,
        cla: *mut RClass,
        name: *const ::core::ffi::c_char,
        fun: mrb_func_t,
        aspec: mrb_aspec,
    );
}
extern "C" {
    pub fn mrb_define_class_method_id(
        mrb: *mut mrb_state,
        cla: *mut RClass,
        name: mrb_sym,
        fun: mrb_func_t,
        aspec: mrb_aspec,
    );
}
extern "C" {
    pub fn mrb_define_singleton_method(
        mrb: *mut mrb_state,
        cla: *mut RObject,
        name: *const ::core::ffi::c_char,
        fun: mrb_func_t,
        aspec: mrb_aspec,
    );
}
extern "C" {
    pub fn mrb_define_singleton_method_id(
        mrb: *mut mrb_state,
        cla: *mut RObject,
        name: mrb_sym,
        fun: mrb_func_t,
        aspec: mrb_aspec,
    );
}
extern "C" {
    pub fn mrb_define_module_function(
        mrb: *mut mrb_state,
        cla: *mut RClass,
        name: *const ::core::ffi::c_char,
        fun: mrb_func_t,
        aspec: mrb_aspec,
    );
}
